Refactor source to zip, model and texture